--- a/css/styles.css
+++ b/css/styles.css
@@ -311,6 +311,10 @@ h3{
 
 .titlebox{
   padding-top: 3rem ;
+  display: inline-block;
+}
+.titleboxinside{
+  display: inline-block;
 }
 
 .contacttext:hover{
@@ -339,13 +343,13 @@ h3{
 
 .typewriter {
   overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em transparent blue; /* The typwriter cursor */
+  border-right: .15em solid blue; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .10em; /* Adjust as needed */
   animation: 
     typing 3.5s steps(40, end),
-    blink-caret .75s step-end;
+    blink-caret .75s step-end infinite;
     fill-opacity: initial;
 }
 
@@ -358,7 +362,7 @@ h3{
 /* The typewriter cursor effect */
 @keyframes blink-caret {
   from, to { border-color: transparent }
-  50% { border-color: orange; }
+  50% { border-color: blueviolet; }
 }
 
 
@@ -400,4 +404,9 @@ h3{
 /* The Transformation */
 .img-hover-zoom--zoom-n-pan-v:hover img {
   transform: scale(1.25) translateY(-30%);
+}
+
+.bottomc{
+  width: 100%;
+  height : 300px;
 }
