--- a/css/styles.css
+++ b/css/styles.css
@@ -373,21 +373,27 @@ h3{
 
 /* [1] The container */
 .img-hover-zoom {
-  height: 30rem; /* [1.1] Set it as per your need */
+  height: 40rem; /* [1.1] Set it as per your need */
   overflow: hidden; /* [1.2] Hide the overflowing of child elements */
-  align-content: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  max-width: 100%;
+  transform: scale(.7);
+  padding-top: 0rem;
 }
 
 /* [2] Transition property for smooth transformation of images */
 .img-hover-zoom img {
   transition: transform 1s, filter 2s ease-in-out;
-
-  transform: scale(1.2);
+  transform: scale(1);
+ 
 }
 
 /* [3] Finally, transforming the image when container gets hovered */
 .img-hover-zoom:hover img {
-  transform: scale(1);
+  transform: scale(1.3);
 }
 
 
@@ -401,7 +407,7 @@ h3{
   align-content: center;
 }
 
-/* The Transformation */
+/* The Transformation img-hover-zoom img-hover-zoom--zoom-n-pan-v*/
 .img-hover-zoom--zoom-n-pan-v:hover img {
   transform: scale(1.25) translateY(-30%);
 }
@@ -409,4 +415,8 @@ h3{
 .bottomc{
   width: 100%;
   height : 300px;
+}
+
+.pic2{
+  width: inherit;
 }
